--- a/Index.html
+++ b/Index.html
@@ -1,5 +1,23 @@
-p {
-  color: red;
-  width: 500px;
-  border: 1px solid black;
-}
+
+<html>
+  <title>
+    First website
+  </title>
+  
+  <body>
+    <h1>This is my first github page</h1>
+  </body>
+  
+  <style>
+    body {
+      background-color:green;
+      color:#fff;
+      text-align:center;
+    }
+  </style>
+  
+</html>
+
+
+
+
